<resources>

    <string name="app_name">Memory Game</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="ok">OK</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="professional">Professional</string>
    <string name="try_counter">Try counter : </string>
    <string name="_0" translatable="false"> 0</string>
    <string name="start_game">Start Game</string>
    <string name="finish">Finish</string>
    <string name="f5">your device must connect with Internet to be able to play</string>
    <string name="you_have_to_choose_one_of_n_the_available_game_levels_n_to_start_playing">You have to choose one of the levels to start playing</string>
    <string name="no_internet">No Internet</string>
    <string name="main_menu">Main Menu</string>
    <string name="share_app">Share app</string>
    <string name="rate_app">rate app</string>
    <string name="play_again">play again</string>
    <string name="wait">You have wait 5 second \n to show and memorize the pictures</string>
    <string name="loseT">You are lose in this \n level try one more again</string>
    <string name="f3">You must match each image with the same as possible in the fewest number of attempts</string>
    <string name="you_have_5_seconds_nto_save_the_photos_nbefore_they_disappear">You have 5 seconds to save the photos before they disappear</string>
    <string name="f4">We suggest you check the side menu button at the top of the screen</string>
    <string name="communicate">Communicate</string>
    <string name="more_apps_we_made">more apps we made</string>
    <string name="notConected">Not Connected</string>
    <string name="winT">You are win in this \n level try anthor one</string>

</resources>