<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/win"
            app:layout_constraintBottom_toTopOf="@id/s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/winT"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img" />


        <TextView
            android:id="@+id/main"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_dialog"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/main_menu"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/again"
            app:layout_constraintTop_toBottomOf="@id/s" />

        <TextView
            android:id="@+id/again"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_dialog"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/play_again"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/s" />


        <TextView
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_dialog"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/share_app"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/more"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/again" />

        <TextView
            android:id="@+id/more"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_dialog"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/rate_app"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/share"
            app:layout_constraintTop_toBottomOf="@id/main"
             />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>

